2006-10-07 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/SceneManagers/EmberPagingSceneManager/include/OgrePagingLandScapeData2D_HeightField.h, src/components/ogre/SceneManagers/EmberPagingSceneManager/include/OgrePagingLandScapeRenderableManager.h: conform to correct C++

2006-10-03 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/InspectWidget.cpp, src/components/ogre/widgets/InspectWidget.h: more efficient handling of updates

2006-10-03 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/EntityPicker.layout: updated layout to tigthen it a bit

2006-10-03 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/InspectWidget.cpp, src/components/ogre/widgets/InspectWidget.h, src/components/ogre/widgets/InspectWidget.xml: extended the inspect widget to handle the attributes better

2006-10-03 Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: updated batch with changes from Elendrim

2006-09-24 Erik Hjortsberg  <erik@katastrof.nu>

	* TODO: updated list

2006-09-24 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/modeldefinitions/characters.modeldef.xml: added definition for the creator

2006-09-24 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/terrain/TerrainPage.cpp: fixed bug which always returned 1
	
2006-09-24 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Avatar.cpp, src/components/ogre/EmberEntityFactory.cpp, src/components/ogre/EmberOgre.cpp, src/components/ogre/terrain/TerrainEditor.cpp, src/components/ogre/widgets/InspectWidget.cpp: adapted to changes to ServerService.h

2006-09-24 Erik Hjortsberg  <erik@katastrof.nu>
